--- a/frontend/leaderboard-app/src/styles.scss
+++ b/frontend/leaderboard-app/src/styles.scss
@@ -1,3 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 
 /* You can add global styles to this file, and also import other style files */
+html, body {
+  margin: 0;
+  padding: 0;
+  background-color: #121212; /* Match the dark background of the main content */
+}
